# sdcard_checker

./: .gitignore  CMakeLists.txt  README.md  install.sh  verify.sh
.github/workflows/: release.yml
cmake/: cmake_uninstall.cmake.in
docs/: privilege-separation.md
include/sdcheck/: sdcheck.h
packaging/: release-notes.md
packaging/appimage/: build-appimage.sh
packaging/system/: README.md  install.sh  uninstall.sh
src/cli/: main.c
src/core/: auto.c  cardinfo.c  device.c  device_guard.c  devmode.c  filemode.c  format.c  internal.h  pattern.c  pattern.h  util.c
src/gui/: main.c
src/mechanism/: main.c
